# medagent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
archive/src/core/: orchestrator.py
archive/src/medagent/config/: settings.py
config/: prompts.py  settings.py
data/chroma_db/: chroma.sqlite3
examples/: MM-2000.txt  MM-2001.txt  MM-2003.txt  MM-2004.txt
medagent/: __init__.py  agent.py  config.py  patient_db_tool.py  prompt.py  tools.py
medagent/sub_agents/evidence/: __init__.py  agent.py  prompt.py  tools.py
medagent/sub_agents/hypothesis/: __init__.py  agent.py  prompt.py
medagent/sub_agents/imaging/: __init__.py  agent.py  mock_data.py  prompt.py  tools.py
medagent/sub_agents/judge/: __init__.py  agent.py  prompt.py
medagent/sub_agents/research/: __init__.py  agent.py  prompt.py  tools.py
medagent/sub_agents/triage/: __init__.py  agent.py  prompt.py
medagent/utils/: extract_data.py  location.py
scripts/: demo_specialist_agents.py  evaluation_setup.py  ingest_data.py  load_patient_cases.py  test_store_image.py
src/agents/: registry.py
src/core/: agent_factory.py  orchestrator.py
src/domain/: models.py
src/infrastructure/rag/: engine.py
src/medagent/: main.py
src/medagent/agents/: registry.py
src/medagent/config/: prompts.py
src/medagent/core/: agent_factory.py  orchestrator.py
src/medagent/utils/: logging_setup.py
src/utils/: logging_setup.py
tests/integration/: test_mri_tool.py  test_simulators.py
tests/unit/: test_agent.py  test_domain.py  test_specialist_agents.py
(+4 files in other folders)
